arma ostree fun almost rdy

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,8 +15,16 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 LinkingTo: 
-    Rcpp
+    Rcpp,
+    RcppArmadillo
 Imports: 
-    Rcpp
+    survival,
+    Rcpp,
+    data.table
 URL: https://github.com/bcjaeger/orsf2
 BugReports: https://github.com/bcjaeger/orsf2/issues
+Depends: 
+    R (>= 2.10)
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
