--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,26 +1,30 @@
 Package: orsf2
-Title: What the Package Does (One Line, Title Case)
+Title: Accelerated Oblique Random Survival Forests
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Byron",
+           family = "Jaeger",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+           email = "bjaeger@wakehealth.edu",
+           comment = c(ORCID = "0000-0001-7399-2299"))
+Description: Oblique random survival forests incorporate linear combinations 
+  of input variables into the recursive partitioning algorithm used to grow
+  decision trees. The algorithm used to grow survival trees is the same as
+  in random survival forests from Ishwaran, 2008 <doi:10.1214/08-AOAS169>. 
+  A Newton Raphson scoring algorithm based on the Cox proportional hazard 
+  model is used to identify linear combinations of input variables. Relative
+  to obliqueRSF, the predecessor of aorsf, decision trees are grown about
+  500 times faster.
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 LinkingTo: 
     Rcpp,
     RcppArmadillo
 Imports: 
-    survival,
-    Rcpp,
-    data.table
+    Rcpp
 URL: https://github.com/bcjaeger/orsf2
 BugReports: https://github.com/bcjaeger/orsf2/issues
 Depends: 
