pull out old code
much of the older code is deprecated and needed to be dropped to
make cran checks easier.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,5 +30,6 @@ BugReports: https://github.com/bcjaeger/orsf2/issues
 Depends: 
     R (>= 2.10)
 Suggests: 
+    survival,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
