--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,6 +31,7 @@ BugReports: https://github.com/bcjaeger/aorsf/issues
 Depends: 
     R (>= 2.10)
 Suggests: 
+    pdp,
     survival,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
