--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,5 +35,8 @@ Suggests:
     pdp,
     survival,
     ggplot2,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    knitr,
+    rmarkdown
 Config/testthat/edition: 3
+VignetteBuilder: knitr
