--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(predict,aorsf)
 S3method(print,aorsf)
 S3method(summary,aorsf)
 export(orsf)
+export(orsf_interaction)
 export(orsf_pd_ice)
 export(orsf_pd_summary)
 export(orsf_vi)
