--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,12 @@
 
 S3method(predict,aorsf)
 S3method(print,aorsf)
-S3method(summary,aorsf)
+S3method(print,aorsf_summary_uni)
 export(orsf)
 export(orsf_interaction)
 export(orsf_pd_ice)
 export(orsf_pd_summary)
+export(orsf_summarize_uni)
 export(orsf_vi)
 import(data.table)
 importFrom(Rcpp,sourceCpp)
