orsf_control funs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ S3method(predict,aorsf)
 S3method(print,aorsf)
 S3method(print,aorsf_summary_uni)
 export(orsf)
+export(orsf_control_cph)
+export(orsf_control_net)
 export(orsf_interaction)
 export(orsf_pd_ice)
 export(orsf_pd_summary)
