--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(print,aorsf_summary_uni)
 export(orsf)
 export(orsf_control_cph)
 export(orsf_control_net)
+export(orsf_control_rlt)
 export(orsf_interaction)
 export(orsf_pd_ice)
 export(orsf_pd_summary)
