--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,13 +8,18 @@ Authors@R:
            email = "bjaeger@wakehealth.edu",
            comment = c(ORCID = "0000-0001-7399-2299"))
 Description: Oblique random survival forests incorporate linear combinations 
-  of input variables into the recursive partitioning algorithm used to grow
-  decision trees. The algorithm used to grow survival trees is the same as
-  in random survival forests from Ishwaran, 2008 <doi:10.1214/08-AOAS169>. 
-  A Newton Raphson scoring algorithm based on the Cox proportional hazard 
-  model is used to identify linear combinations of input variables. Relative
-  to obliqueRSF, the predecessor of aorsf, decision trees are grown about
-  500 times faster.
+  of input variables into the recursive partitioning algorithm, a routine that
+  is commonly used to grow decision trees. Oblique trees are usually more 
+  effective in creating generalizable decision rules compared to their 
+  axis-based counterparts, but the computational requirements of identifying
+  oblique splits are usually much higher than that of an axis-based split. 
+  Previous oblique decision tree algorithms embedded statistical models, e.g., 
+  the Cox proportional hazards model, into nodes of a decision tree to identify
+  linear combinations of input variables. A much faster approach utilized here
+  is to apply incomplete Newton Raphson scoring based on Cox regression to 
+  to identify linear combinations of input variables. In other words, complete
+  1 iteration of the Newton Raphson algorithm and use the initial estimates
+  of regression coefficients to derive a linear combination of inputs. 
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
