--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,8 @@ Authors@R:
 Description: Fit, interpret, and make predictions with oblique random
     survival forests. Oblique decision trees are notoriously slow compared
     to their axis based counterparts, but 'aorsf' runs as fast or faster than 
-    axis-based decision tree algorithms for survival decision trees.
+    axis-based decision tree algorithms for right-censored time-to-event 
+    outcomes.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -27,7 +28,7 @@ URL: https://github.com/bcjaeger/aorsf,
     https://bcjaeger.github.io/aorsf
 BugReports: https://github.com/bcjaeger/aorsf/issues
 Depends: 
-    R (>= 4.0.0)
+    R (>= 3.5.0)
 Suggests: 
     survival,
     ggplot2,
