anova importance docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,8 @@ export(orsf_interaction)
 export(orsf_pd_ice)
 export(orsf_pd_summary)
 export(orsf_summarize_uni)
-export(orsf_vi)
+export(orsf_vi_anova)
+export(orsf_vi_negate)
 import(data.table)
 importFrom(Rcpp,sourceCpp)
 useDynLib(aorsf, .registration = TRUE)
