--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(orsf_control_net)
 export(orsf_pd_ice)
 export(orsf_pd_summary)
 export(orsf_summarize_uni)
+export(orsf_train)
 export(orsf_vi_anova)
 export(orsf_vi_negate)
 import(data.table)
