--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,8 +8,10 @@ export(orsf_control_cph)
 export(orsf_control_net)
 export(orsf_pd_ice)
 export(orsf_pd_summary)
+export(orsf_scale_cph)
 export(orsf_summarize_uni)
 export(orsf_train)
+export(orsf_unscale_cph)
 export(orsf_vi_anova)
 export(orsf_vi_negate)
 import(data.table)
