time to train for ML standard

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(orsf_pd_ice)
 export(orsf_pd_summary)
 export(orsf_scale_cph)
 export(orsf_summarize_uni)
+export(orsf_time_to_train)
 export(orsf_train)
 export(orsf_unscale_cph)
 export(orsf_vi_anova)
