add setdiff in cpp as helper for oob matching
ML standards request object be compared based on their resampling
performance. Random forests have out-of-bag error to approximate
resampling performance. I want to compare two random forests using the
same out-of-bag samples. One way to do that is to grow them using the
same out-of-bag indices.

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -23,6 +23,7 @@ reference:
 - contents:
   - matches("^orsf$")
   - starts_with("orsf_control")
+  - matches("^orsf_time_to_train$")
   - matches("^predict\\.aorsf$")
   - matches("^print\\.aorsf$")
 - title: Interpret ORSFs
