--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,8 @@ Authors@R: c(
            role = c("aut", "cre"),
            email = "bjaeger@wakehealth.edu",
            comment = c(ORCID = "0000-0001-7399-2299")),
-    person(given = "Nicholas",  family = "Pajewski", role = "ctb")
+    person(given = "Nicholas",  family = "Pajewski", role = "ctb"),
+    person(given = "Sawyer", family = "Welden", role = "ctb", email = "swelden@wakehealth.edu")
     )
 Description: Fit, interpret, and make predictions with oblique random
     survival forests. Oblique decision trees are notoriously slow compared
