--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(print,aorsf)
 S3method(print,aorsf_summary_uni)
 export(orsf)
 export(orsf_control_cph)
+export(orsf_control_custom)
 export(orsf_control_net)
 export(orsf_pd_ice)
 export(orsf_pd_summary)
