--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(orsf_train)
 export(orsf_unscale_cph)
 export(orsf_vi_anova)
 export(orsf_vi_negate)
+export(orsf_vi_permute)
 import(data.table)
 importFrom(Rcpp,sourceCpp)
 useDynLib(aorsf, .registration = TRUE)
