--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,8 +9,8 @@ export(orsf_control_cph)
 export(orsf_control_custom)
 export(orsf_control_fast)
 export(orsf_control_net)
-export(orsf_pd_ice)
-export(orsf_pd_summary)
+export(orsf_ice)
+export(orsf_pd)
 export(orsf_scale_cph)
 export(orsf_summarize_uni)
 export(orsf_time_to_train)
