--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,7 +43,7 @@ Depends:
     R (>= 3.6)
 Suggests: 
     survival,
-    survivalROC,
+    SurvMetrics,
     ggplot2,
     testthat (>= 3.0.0),
     knitr,
