impute test data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,4 +26,5 @@ export(orsf_vi_negate)
 export(orsf_vi_permute)
 import(data.table)
 importFrom(Rcpp,sourceCpp)
+importFrom(collapse,"%==%")
 useDynLib(aorsf, .registration = TRUE)
