--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(orsf_vi)
 export(orsf_vi_anova)
 export(orsf_vi_negate)
 export(orsf_vi_permute)
+export(orsf_vs)
 import(data.table)
 importFrom(Rcpp,sourceCpp)
 importFrom(collapse,"%==%")
