--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -33,10 +33,11 @@ reference:
   - matches("^orsf_control_cph$")
   - matches("^orsf_control_net$")
   - matches("^orsf_control_custom$")
-- title: Variable importance
-  desc: Estimate the importance of individual variables using ORSFs
+- title: Variable importance/selection
+  desc: Estimate the importance of individual variables and conduct variable selection using ORSFs
 - contents:
   - matches("^orsf_vi")
+  - matches("^orsf_vs")
 - title: Partial dependence and individual conditional expectations
   desc: Interpret your model by generating partial dependence or individual conditional expectation values. Plotting functions not included (but see examples)
 - contents:
