--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(print,orsf_summary_uni)
 export(orsf)
 export(orsf_control_cph)
 export(orsf_control_custom)
+export(orsf_control_fast)
 export(orsf_control_net)
 export(orsf_ice_inb)
 export(orsf_ice_new)
