--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,7 +39,8 @@ Imports:
     data.table,
     utils,
     stats,
-    collapse
+    collapse,
+    R6
 URL: https://github.com/ropensci/aorsf,
     https://docs.ropensci.org/aorsf/
 BugReports: https://github.com/ropensci/aorsf/issues/
