--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(orsf_vi_anova)
 export(orsf_vi_negate)
 export(orsf_vi_permute)
 export(orsf_vs)
+import(R6)
 import(data.table)
 importFrom(Rcpp,sourceCpp)
 importFrom(collapse,"%==%")
