deprecate the old controls

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,10 +5,14 @@ S3method(predict,ObliqueForest)
 S3method(print,ObliqueForest)
 S3method(print,orsf_summary_uni)
 export(orsf)
+export(orsf_control)
+export(orsf_control_classification)
 export(orsf_control_cph)
 export(orsf_control_custom)
 export(orsf_control_fast)
 export(orsf_control_net)
+export(orsf_control_regression)
+export(orsf_control_survival)
 export(orsf_ice_inb)
 export(orsf_ice_new)
 export(orsf_ice_oob)
@@ -29,4 +33,5 @@ import(R6)
 import(data.table)
 importFrom(Rcpp,sourceCpp)
 importFrom(collapse,"%==%")
+importFrom(lifecycle,deprecated)
 useDynLib(aorsf, .registration = TRUE)
