--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,7 @@ Description: Fit, interpret, and make predictions with oblique random survival f
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-Roxygen: list(markdown = TRUE, roclets = c ("namespace", "rd"))
+Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 LinkingTo: 
     Rcpp,
@@ -38,8 +38,9 @@ Imports:
     Rcpp,
     data.table,
     utils,
-    collapse, 
-    R6
+    collapse,
+    R6,
+    lifecycle
 URL: https://github.com/ropensci/aorsf,
     https://docs.ropensci.org/aorsf/
 BugReports: https://github.com/ropensci/aorsf/issues/
