--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(orsf_summarize_uni)
 export(orsf_time_to_train)
 export(orsf_train)
 export(orsf_unscale_cph)
+export(orsf_update)
 export(orsf_vi)
 export(orsf_vi_anova)
 export(orsf_vi_negate)
