--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -56,6 +56,7 @@ Suggests:
     glmnet,
     covr,
     units,
-    tibble
+    tibble,
+    tidyverse
 Config/testthat/edition: 3
 VignetteBuilder: knitr
