fix unstated deps

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(orsf_vi_negate)
 export(orsf_vi_permute)
 export(orsf_vs)
 export(pred_spec_auto)
+export(pred_spec_intr)
 import(R6)
 import(data.table)
 importFrom(Rcpp,sourceCpp)
