--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,9 +29,9 @@ export(orsf_vi)
 export(orsf_vi_anova)
 export(orsf_vi_negate)
 export(orsf_vi_permute)
+export(orsf_vint)
 export(orsf_vs)
 export(pred_spec_auto)
-export(pred_spec_intr)
 import(R6)
 import(data.table)
 importFrom(Rcpp,sourceCpp)
